// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отрендерить в правой колонке уведомление о том, что такая заявка уже есть, если отправка формы вернула ошибку CONFLICT 1`] = `
<div
  className="MatchApplicationModalDesktop__column"
>
  <MatchApplicationModalNotification
    buttonText="Хорошо"
    onClick={[Function]}
    text="Наши специалисты работают с ней"
    title="Такая заявка уже отправлена"
    type="success"
  />
</div>
`;

exports[`должен отрендерить в правой колонке уведомление об ошибке, если отправка формы вернула любую ошибку, кроме CONFLICT 1`] = `
<div
  className="MatchApplicationModalDesktop__column"
>
  <MatchApplicationModalNotification
    buttonText="Попробовать еще раз"
    onClick={[Function]}
    text="Не удалось отправить данные формы"
    title="Ой!"
    type="warning"
  />
</div>
`;

exports[`должен отрендерить в правой колонке уведомление об успешной отправке, в случае успешной отправки формы 1`] = `
<div
  className="MatchApplicationModalDesktop__column"
>
  <MatchApplicationModalNotification
    buttonText="Хорошо"
    onClick={[Function]}
    text="Скоро наш специалист свяжется с вами и подберёт дилеров с лучшими предложениями"
    title="Заявка отправлена!"
    type="success"
  />
</div>
`;

exports[`должен отрендерить в правой колонке уведомление с просьбой выбрать другой авто, если проверка показала, что нет предложений по такой марке-модели 1`] = `
<div
  className="MatchApplicationModalDesktop__column"
>
  <MatchApplicationModalNotification
    buttonText="Выбрать другой автомобиль"
    onClick={[Function]}
    text="Автомобилей с выбранными параметрами сейчас нет"
    title="Ой!"
    type="warning"
  />
</div>
`;

exports[`должен отрендерить в правой колонке форму по дефолту 1`] = `
<div
  className="MatchApplicationModalDesktop__column"
>
  <MatchApplicationModalForm
    defaultMarkCode="AUDI"
    defaultModelCode="Q5"
    fetchModels={[Function]}
    marks={
      Array [
        Object {
          "id": "AUDI",
          "name": "Audi",
        },
      ]
    }
    models={
      Array [
        Object {
          "id": "Q5",
          "name": "Q5",
        },
      ]
    }
    onSubmit={[Function]}
  />
</div>
`;
